tests/bad/not_always_return.oc
///fail: Function does not always return

def foo(): i32 {
    if false then return 1
}